--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "gril-ledger",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.18.5",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/supabase": "^1.4.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "nuxt": "^3.13.2",
@@ -19,5 +22,6 @@
   },
   "devDependencies": {
     "drizzle-kit": "^0.24.2"
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
