--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.8.0",
-    "@nuxt/ui": "^2.18.5",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/supabase": "^1.4.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "nuxt": "^3.13.2",
     "postgres": "^3.4.4",
-    "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.0",
+    "@nuxt/ui": "^2.18.6",
     "drizzle-kit": "^0.24.2",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "vue": "^3.5.10"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
