--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/supabase": "^1.4.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "lucide-vue-next": "^0.447.0",
     "nuxt": "^3.13.2",
     "postgres": "^3.4.4",
     "vue-router": "latest"
