--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/supabase": "^1.4.0",
+    "@vueuse/motion": "^2.2.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "lucide-vue-next": "^0.447.0",
